--- a/src/mybulma/sass/mystyles.scss
+++ b/src/mybulma/sass/mystyles.scss
@@ -205,6 +205,7 @@ a.navbar-burger {
 @import "../node_modules/bulma/sass/elements/content.sass";
 @import "../node_modules/bulma/sass/elements/icon.sass";
 @import "../node_modules/bulma/sass/elements/image.sass";
+@import "../node_modules/bulma/sass/elements/other.sass"; // block
 @import "../node_modules/bulma/sass/elements/tag.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
 
