--- a/src/mybulma/css/mystyles.css
+++ b/src/mybulma/css/mystyles.css
@@ -2745,6 +2745,27 @@ div.icon-text {
     height: 128px;
     width: 128px; }
 
+.heading {
+  display: block;
+  font-size: 11px;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  text-transform: uppercase; }
+
+.number {
+  align-items: center;
+  background-color: whitesmoke;
+  border-radius: 9999px;
+  display: inline-flex;
+  font-size: 1.25rem;
+  height: 2em;
+  justify-content: center;
+  margin-right: 1.5rem;
+  min-width: 2.5em;
+  padding: 0.25rem 0.5rem;
+  text-align: center;
+  vertical-align: top; }
+
 .tags {
   align-items: center;
   display: flex;
@@ -6152,11 +6173,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   transform-origin: center;
   width: 0.625em; }
 
-.message:not(:last-child), .tabs:not(:last-child), .content:not(:last-child), .title:not(:last-child),
+.message:not(:last-child), .tabs:not(:last-child), .content:not(:last-child), .block:not(:last-child), .title:not(:last-child),
 .subtitle:not(:last-child) {
   margin-bottom: 1.5rem; }
 
-.modal-close {
+.modal-close, .delete {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -6182,7 +6203,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   position: relative;
   vertical-align: top;
   width: 20px; }
-  .modal-close::before, .modal-close::after {
+  .modal-close::before, .delete::before, .modal-close::after, .delete::after {
     background-color: white;
     content: "";
     display: block;
@@ -6191,31 +6212,31 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     top: 50%;
     transform: translateX(-50%) translateY(-50%) rotate(45deg);
     transform-origin: center center; }
-  .modal-close::before {
+  .modal-close::before, .delete::before {
     height: 2px;
     width: 50%; }
-  .modal-close::after {
+  .modal-close::after, .delete::after {
     height: 50%;
     width: 2px; }
-  .modal-close:hover, .modal-close:focus {
+  .modal-close:hover, .delete:hover, .modal-close:focus, .delete:focus {
     background-color: rgba(10, 10, 10, 0.3); }
-  .modal-close:active {
+  .modal-close:active, .delete:active {
     background-color: rgba(10, 10, 10, 0.4); }
-  .is-small.modal-close {
+  .is-small.modal-close, .is-small.delete {
     height: 16px;
     max-height: 16px;
     max-width: 16px;
     min-height: 16px;
     min-width: 16px;
     width: 16px; }
-  .is-medium.modal-close {
+  .is-medium.modal-close, .is-medium.delete {
     height: 24px;
     max-height: 24px;
     max-width: 24px;
     min-height: 24px;
     min-width: 24px;
     width: 24px; }
-  .is-large.modal-close {
+  .is-large.modal-close, .is-large.delete {
     height: 32px;
     max-height: 32px;
     max-width: 32px;
@@ -6223,7 +6244,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
     min-width: 32px;
     width: 32px; }
 
-.button.is-loading::after {
+.button.is-loading::after, .loader {
   animation: spinAround 500ms infinite linear;
   border: 2px solid #dbdbdb;
   border-radius: 9999px;
