navbar logo, added extra icons to about & gallery

--- a/src/mybulma/sass/mystyles.scss
+++ b/src/mybulma/sass/mystyles.scss
@@ -40,6 +40,8 @@ button.delete {
 // go to Top
 #top {
     position: fixed;
+    height: 58px;
+    width: 58px;
     right: 5px;
     bottom: 10px;
     z-index: 1;
