--- a/src/mybulma/css/mystyles.css
+++ b/src/mybulma/css/mystyles.css
@@ -1,8 +1,17 @@
-.has-text-secondary {
-  color: #2ecc40; }
+.has-background-secondary {
+  background-color: #2ecc40 !important; }
+
+.has-background-pink {
+  background-color: #e9a0a0 !important; }
+
+.has-background-purple {
+  background-color: #b10dc9 !important; }
+
+.has-background-peach {
+  background-color: #f6c492 !important; }
 
 #cookieMsg {
-  position: sticky;
+  position: fixed;
   width: 280px;
   height: 125px;
   left: 10px;
@@ -21,36 +30,37 @@ button.delete {
   bottom: 10px;
   z-index: 1; }
 
+@use '../abstracts/colors' as *;
 .navbar {
   border-bottom: 5px solid #2ecc40; }
-
-a.navbar-burger {
-  height: auto; }
+  .navbar #logo {
+    max-height: 70px !important; }
 
 @media screen and (max-width: 1023px) {
-  a.navbar-item:focus,
-  a.navbar-item:focus-within,
-  a.navbar-item:hover,
-  a.navbar-item.is-active,
-  .navbar-link:focus,
-  .navbar-link:focus-within,
-  .navbar-link:hover,
-  .navbar-link.is-active {
-    color: initial !important; } }
+  .navbar-menu .is-active {
+    color: #ff851b !important; }
+  .navbar-menu :hover {
+    color: #2ecc40 !important; }
+  .navbar-end a.is-active,
+  .navbar-end a:hover {
+    background-color: initial !important; } }
 
 @media screen and (min-width: 1080px) {
-  .navbar.is-black .navbar-end > a.is-active p {
+  .navbar-end a.is-active p {
+    border-bottom: solid 2px #ff851b !important; }
+  .navbar-end a:hover p {
     border-bottom: solid 2px #2ecc40 !important; }
-  .navbar.is-black .navbar-end > a.navbar-item:hover p {
-    border-bottom: solid 2px #ff851b !important; } }
+  .navbar-dropdown a:hover {
+    background-color: initial !important; }
+  .navbar-dropdown a.is-active {
+    background-color: initial !important;
+    color: #4a4a4a !important; } }
 
 .hero {
-  background-color: black;
   background-image: url(../../images/index/flower-arrangement-hero.webp);
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.9;
-  text-align: center; }
+  opacity: 0.9; }
 
 @media screen and (max-width: 950px) {
   .hero {
@@ -60,55 +70,42 @@ a.navbar-burger {
   .hero {
     background-image: url(../../images/index/flower-arrangement-hero-small.webp); } }
 
-@media screen and (max-width: 769px) {
-  #products .column:not(.column:first-child) {
-    margin-top: 2rem; } }
-
-.tabs a {
-  color: inherit; }
-
-.tabs.is-toggle li.is-active a {
+@use '../abstracts/colors' as *;
+.tabs .is-active a {
   background-color: #2ecc40 !important;
-  border-color: #2ecc40 !important;
-  color: #fff;
-  z-index: 1; }
+  border-bottom-color: initial !important;
+  border-color: initial !important; }
 
-@media screen and (max-width: 769px) {
-  #purchase .column:not(.column:first-child) {
-    margin-top: 2rem; } }
+@use '../abstracts/colors' as *;
+#filters .button {
+  width: 100px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  justify-content: center; }
 
-@media screen and (max-width: 769px) {
-  #process .column:not(.column:first-child) {
-    margin-top: 2rem; } }
+#filters .button:focus {
+  border-color: #4a4a4a !important; }
 
-@media screen and (max-width: 769px) {
-  #footer .column {
-    margin-top: 2rem; } }
+#filters .button[data-color=all]:not(:hover),
+#filters .button[data-color=cross]:not(:hover),
+#filters .button[data-color=heart]:not(:hover),
+#filters .button[data-color=saddle]:not(:hover) {
+  border-color: #e6e6e6 !important; }
 
-@media screen and (max-width: 769px) {
-  #gallery .column:not(.column:first-child) {
-    margin-top: 2rem; } }
+.article-img {
+  max-width: 900px !important; }
 
-.has-background-pink {
-  background-color: #e9a0a0 !important; }
+.article-tall-img {
+  max-height: 600px !important; }
 
-.has-background-purple {
-  background-color: #b10dc9 !important; }
+.article-square-img {
+  max-height: 400px !important; }
 
-.has-background-peach {
-  background-color: #f6c492 !important; }
+article p:not(:first-child) {
+  max-width: 60vw !important; }
 
-.has-background-secondary {
-  background-color: #2ecc40 !important; }
-
-@media screen and (max-width: 769px) {
-  #quality .column:not(.column:first-child) {
-    margin-top: 2rem; }
-  #delivery .column:not(.column:first-child) {
-    margin-top: 2rem; } }
-
-#test {
-  background-color: red; }
+article .block {
+  max-width: 60vw !important; }
 
 /* Bulma Base */
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
@@ -1201,10 +1198,7 @@ body.has-navbar-fixed-bottom {
 a.navbar-item,
 .navbar-link {
   cursor: pointer; }
-  a.navbar-item:focus,
-  a.navbar-item:focus-within,
-  a.navbar-item:hover,
-  a.navbar-item.is-active,
+  a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-item.is-active,
   .navbar-link:focus,
   .navbar-link:focus-within,
   .navbar-link:hover,
