--- a/src/mybulma/sass/components/_hero.scss
+++ b/src/mybulma/sass/components/_hero.scss
@@ -1,22 +1,29 @@
-.hero {
-    background-image: url(../../images/index/flower-arrangement-hero.webp);
+.is-fullheight-with-navbar {
+
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.9;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 500px) {
+    
+    .is-fullheight-with-navbar {
+        background-image: url(../../images/index/flower-arrangement-hero-small.webp);
+    }
+}
 
-    .hero {
+@media screen and (min-width: 501px) {
+
+    .is-fullheight-with-navbar {
 
         background-image: url(../../images/index/flower-arrangement-hero-medium.webp);
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 951px) {
 
-    .hero {
+    .is-fullheight-with-navbar {
 
-        background-image: url(../../images/index/flower-arrangement-hero-small.webp);
+        background-image: url(../../images/index/flower-arrangement-hero.webp);
     }
 }
