--- a/src/mybulma/sass/components/_hero.scss
+++ b/src/mybulma/sass/components/_hero.scss
@@ -1,6 +1,7 @@
 .is-fullheight-with-navbar {
 
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     opacity: 0.9;
 }
